# MirrorSphere

./: .gitignore  Cargo.toml  README.md  README_ZH.md  build.rs  config.toml  devnote.txt
.github/workflows/: master-build.yml  pr-check.yml
macros/src/: lib.rs  log.rs  loggable.rs  traceable.rs
src/: main.rs
src/core/: app_config.rs  backup_engine.rs  config_manager.rs  database_manager.rs  engine.rs  event_bus.rs  gui_manager.rs  io_manager.rs  mod.rs  progress_tracker.rs  schedule_manager.rs  system.rs  task_manager.rs
src/core/actor/: actor_system.rs  mod.rs
src/core/backup/: backup_engine.rs  backup_service.rs  comparator.rs  copier.rs  mod.rs  progress_tracker.rs
src/core/event_system/: actor_dispatcher.rs  actor_ref.rs  event_bus.rs  listener_group.rs  mod.rs
src/core/gui/: gui_manager.rs  gui_message_handler.rs  mod.rs
src/core/infrastructure/: actor_system.rs  app_config.rs  communication_manager.rs  database_manager.rs  io_manager.rs  mod.rs
src/core/schedule/: mod.rs  schedule_manager.rs  schedule_service.rs  schedule_timer.rs  timer.rs
src/interface/: database_ops.rs  event.rs  file_system.rs  mod.rs  service_unit.rs
src/interface/actor/: actor.rs
src/interface/communication/: command.rs  event.rs  message.rs  mod.rs  query.rs
src/interface/core/: file_system.rs  mod.rs  runnable.rs  service.rs  unit.rs
src/interface/event_system/: actor.rs  dispatcher.rs  event.rs  event_handler.rs  message_dispatcher.rs  mod.rs
src/interface/repository/: schedule.rs
src/macro/: log.rs  loggable.rs  mod.rs  traceable.rs
src/model/: backup_options.rs  backup_schedule.rs  backup_task.rs  backup_type.rs  comparison_mode.rs  config.rs  diff_entry.rs  event.rs  hash_type.rs  mod.rs  task.rs
src/model/backup/: backup_execution.rs  backup_schedule.rs  mod.rs  progress_data.rs
src/model/core/: mod.rs
src/model/core/actor/: actor_ref.rs  actor_runtime.rs  envelope.rs  mod.rs
src/model/core/backup/: backup_execution.rs  communication.rs  execution.rs  message.rs  mod.rs
src/model/core/gui/: communication.rs  message.rs
src/model/core/infrastructure/: event_broadcaster.rs  mod.rs
src/model/core/schedule/: backup_schedule.rs  communication.rs  message.rs  mod.rs  schedule.rs
src/model/error/: actor.rs  database.rs  event.rs  io.rs  message.rs  misc.rs  mod.rs  serializable.rs  system.rs  task.rs
src/model/event/: error.rs  execution.rs  filesystem.rs  io_event.rs  mod.rs  schedule.rs  task.rs  tasks.rs
src/model/event/io/: acl.rs  attributes.rs  directory.rs  file.rs  hash.rs  mod.rs  permission.rs
src/model/event/progress/: checkpoint.rs  mod.rs  task.rs
src/model/log/: database.rs  event.rs  io.rs  misc.rs  system.rs  task.rs
src/platform/: mod.rs
src/platform/linux/: attributes.rs  constants.rs  database_ops.rs  elevate.rs  file_system.rs  mod.rs  raii_guard.rs
src/platform/windows/: attributes.rs  constants.rs  database_ops.rs  elevate.rs  file_system.rs  helper.rs  mod.rs  raii_guard.rs
src/trait/: file_system.rs
src/ui/: backup_app.rs  common.rs  execution_page.rs  main_page.rs  mod.rs  schedule_page.rs
src/utils/: assets.rs  database_lock.rs  file_hash.rs  file_lock.rs  font.rs  logging.rs  mod.rs  privilege.rs
src/utils/log_entry/: database.rs  event.rs  io.rs  misc.rs  mod.rs  system.rs  task.rs
