[package]
name = "MirrorSphere"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"
toml = "0.8.22"
anyhow = "1.0.98"
dashmap = "6.1.0"
tracing = "0.1.41"
privilege = "0.3.0"
thiserror = "2.0.12"
tracing-appender = "0.2.3"
fs4 = { version = "0.13.1", features = ["sync", "tokio"] }
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid", "derive"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0.140"
futures = "0.3.31"
async-trait = "0.1.88"
tokio-stream = "0.1.17"
sha3 = "0.10.8"
sha2 = "0.10.8"
blake2 = "0.10.6"
digest = "0.10.7"
md-5 = "0.10.6"
chrono = "0.4.41"
libc = "0.2.169"
crossbeam-queue = "0.3.11"
memmap2 = "0.9.5"
bincode = { version = "2.0.1", features = ["serde"] }

[dependencies.blake3]
version = "1.8.2"
features = ["traits-preview"]

[dependencies.uuid]
version = "1.16.0"
features = ["v4", "fast-rng", "serde"]

[target.'cfg(windows)'.dependencies.windows-acl]
version = "0.3.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = [
    "Win32", "Win32_System", "Win32_System_Memory", "Win32_System_IO", "Win32_System_Threading", "Win32_System_Time",
    "Win32_System_Registry", "Win32_System_Com", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage",
    "Win32_Storage_FileSystem", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"
]
