[package]
name = "MirrorSphere"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bincode = { version = "2.0.1", features = ["serde"] }
blake2 = "0.10.6"
chrono = "0.4.41"
crossbeam-queue = "0.3.11"
dashmap = "6.1.0"
digest = "0.10.7"
fs4 = { version = "0.13.1", features = ["sync", "tokio"] }
futures = "0.3.31"
libc = "0.2.169"
log = "0.4.27"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
md-5 = "0.10.6"
memmap2 = "0.9.5"
privilege = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sha3 = "0.10.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid", "derive"] }
thiserror = "2.0.12"
tokio-stream = "0.1.17"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dependencies.blake3]
version = "1.8.2"
features = ["traits-preview"]

[dependencies.uuid]
version = "1.17.0"
features = ["v4", "fast-rng", "serde"]

[target.'cfg(windows)'.dependencies.windows-acl]
version = "0.3.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = [
    "Win32", "Win32_System", "Win32_System_Memory", "Win32_System_IO", "Win32_System_Threading", "Win32_System_Time",
    "Win32_System_Registry", "Win32_System_Com", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage",
    "Win32_Storage_FileSystem", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"
]
