[package]
name = "MirrorSphere"
version = "1.0.0-Alpha1"
edition = "2024"
build = "build.rs"
authors = ["DaLaw2"]

[dependencies]
async-trait = "0.1.89"
bincode = { version = "2.0.1", features = ["serde"] }
blake2 = "0.10.6"
blake3 = { version = "1.8.2", features = ["traits-preview"] }
chrono = { version = "0.4.41", features = ["serde"] }
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
digest = "0.10.7"
eframe = "0.32.0"
egui-file-dialog = "0.11.0"
font-kit = "0.14.3"
futures = "0.3.31"
image = "0.25.6"
libc = "0.2.174"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
macros = { path = "macros" }
md-5 = "0.10.6"
memmap2 = "0.9.8"
privilege = "0.3.0"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
sha3 = "0.10.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid", "derive", "chrono"] }
thiserror = "2.0.16"
tokio-stream = "0.1.17"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.4"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["v4", "fast-rng", "serde"] }

[target.'cfg(windows)'.dependencies.windows-acl]
version = "0.3.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.3"
features = [
    "Win32", "Win32_System", "Win32_System_Memory", "Win32_System_IO", "Win32_System_Threading", "Win32_System_Time",
    "Win32_System_Registry", "Win32_System_Com", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage",
    "Win32_Storage_FileSystem", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Console"
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
